k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-app
  labels:
    app: basic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-app
  template:
    metadata:
      labels:
        app: basic-app
    spec:
      # Uncomment if using a private Docker Hub image:
      # imagePullSecrets:
      #   - name: regcred
      containers:
        - name: basic-app
          image: ojasvi281103/basic-app:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
